--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           command: | 
              aws cloudformation deploy \
-             --template-file template.yaml \
+             --template-file ..\template.yaml \
              --stack-name myStack-${CIRCLE_WORKFLOW_ID} \
              --region ${AWS_DEFAULT_REGION}
       - destroy_environment 
