--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
       - checkout
       - run:
           command: | 
+             pwd
+             ls -la
              aws cloudformation deploy \
              --template-file ..\\template.yaml \
              --stack-name myStack-${CIRCLE_WORKFLOW_ID} \
