--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,10 @@ jobs:
       - checkout
       - run:
           command: | 
-             pwd
-             ls -la
+             # pwd
+             # ls -la
              aws cloudformation deploy \
-             --template-file ..\\template.yaml \
+             --template-file template.yml \
              --stack-name myStack-${CIRCLE_WORKFLOW_ID} \
              --region ${AWS_DEFAULT_REGION}
       - destroy_environment 
