--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory.txt main0.yml
+            ansible-playbook -i inventory.txt main.yml
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
