--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,27 +34,44 @@ jobs:
 #             --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:8} \
 #             --region ${AWS_DEFAULT_REGION}
 #      - destroy_environment 
-  configure_infrastructure: 
-    docker:
-      - image: python:3.7-alpine3.11
-    steps:
-      - checkout
-      - add_ssh_keys:
-          fingerprints: ["04:ba:16:8d:68:13:6f:97:f7:f6:16:ee:c0:be:ec:10"] # From Additional Key added based on udacity.pem
-      - run:
+#  configure_infrastructure: 
+#    docker:
+#      - image: python:3.7-alpine3.11
+#    steps:
+#      - checkout
+#      - add_ssh_keys:
+#          fingerprints: ["04:ba:16:8d:68:13:6f:97:f7:f6:16:ee:c0:be:ec:10"] # From Additional Key added based on udacity.pem
+#      - run:
+#          name: Install dependencies
+#          command: |
+#            # install the dependencies needed for your playbook
+#            apk add --update ansible 
+#      - run:
+#          name: Configure server
+#          command: |
+#            ansible-playbook -i inventory.txt main.yml
+    smoke_test:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
           name: Install dependencies
           command: |
             # install the dependencies needed for your playbook
-            apk add --update ansible 
-      - run:
-          name: Configure server
-          command: |
-            ansible-playbook -i inventory.txt main.yml
+            apk add --update curl
+            URL="https://www.google.com"
+            if curl -s --head ${URL}
+            then
+              return 0
+            else
+              return 1
+            fi
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
     # Run the save job in its own container
     jobs:
 #      - create_infrastructure
-      - configure_infrastructure
+#      - configure_infrastructure
+       - smoke_test
 
