--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,10 @@ workflows:
     # Run the save job in its own container
     jobs:
       - create_infrastructure
-      - configure_infrastructure
-      - smoke_test
+      - configure_infrastructure:
+          requires:
+            - create_infrastructure
+      - smoke_test:
+          requires:
+            - configure_infrastructure 
 
