Added deployment Logic

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,64 @@ jobs:
               return 1
             fi
       - destroy_environment
+  create_and_deploy_front_end:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Execute bucket.yml - Create Cloud Formation Stack
+          command: |
+            aws cloudformation deploy \
+            --template-file bucket.yml \
+            --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:8} \
+            --parameter-overrides MyBucketName="mybucket-${CIRCLE_WORKFLOW_ID:0:8}"
+    get_last_deployment_id:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run: yum install -y tar gzip
+        - run:
+            name: Fetch and save the old pipeline ID (bucket name) responsible for the last release.
+            command: |
+              aws cloudformation \
+              list-exports --query "Exports[?Name==\`PipelineID\`].Value" \
+              --no-paginate --output text > ~/textfile.txt
+        - persist_to_workspace:
+            root: ~/
+            paths: 
+              - textfile.txt 
+    promote_to_production:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: Execute cloudfront.yml
+            command: |
+              aws cloudformation deploy \
+              --template-file cloudfront.yml \
+              --stack-name production-distro \
+              --parameter-overrides PipelineID="mybucket-${CIRCLE_WORKFLOW_ID:0:8}"
+    clean_up_old_front_end:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run: yum install -y tar gzip
+        - attach_workspace:
+            at: ~/
+        - run:
+            name: Destroy the previous production version's S3 bucket and CloudFormation stack. 
+            # Use $OldBucketID environment variable or mybucket644752792305 below.
+            # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
+            command: |
+              export OldBucketID=$(cat ~/textfile.txt)
+              aws s3 rm "s3://${OldBucketID}" --recursive
+            #  aws cloudformation delete-stack --stack-name production-distro 
+            #  aws cloudformation delete-stack --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:8}
+            #  aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:8}
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
@@ -81,4 +139,16 @@ workflows:
       - smoke_test:
           requires:
             - configure_infrastructure 
+      - create_and_deploy_front_end:
+          requires:
+            - smoke_test
+      - get_last_deployment_id:
+          requires:
+            - create_and_deploy_front_end
+      - promote_to_production:
+          requires:
+            - get_last_deployment_id
+      - clean_up_old_front_end:
+          requires:
+            - promote_to_production
 
