Added additional frontend cleanup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,8 +126,8 @@ jobs:
             export OldBucketID=$(cat ~/textfile.txt)
             aws s3 rm "s3://${OldBucketID}" --recursive
           #  aws cloudformation delete-stack --stack-name production-distro 
-          #  aws cloudformation delete-stack --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:8}
-          #  aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:8}
+            aws cloudformation delete-stack --stack-name stack-create-bucket-${OldBucketID}
+            aws cloudformation delete-stack --stack-name myStack-${OldBucketID}
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
