--- a/cloudfront.yml
+++ b/cloudfront.yml
@@ -14,7 +14,7 @@ Resources:
     Properties:
       DistributionConfig:
         Origins:
-          - DomainName: !Sub "jcm9876543210.s3.amazonaws.com"
+          - DomainName: !Sub "${PipelineID}.s3.amazonaws.com"
             Id: webpage
             S3OriginConfig:
               OriginAccessIdentity: !Sub "origin-access-identity/cloudfront/${CloudFrontOriginAccessIdentity}"
