--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,9 @@ jobs:
           command: |
             export OldBucketID=$(cat ~/textfile.txt)
             aws s3 rm "s3://${OldBucketID}" --recursive
-          #  aws cloudformation delete-stack --stack-name production-distro 
-            aws cloudformation delete-stack --stack-name stack-create-bucket-${OldBucketID}
-            aws cloudformation delete-stack --stack-name myStack-${OldBucketID}
+            aws cloudformation delete-stack --stack-name "stack-create-bucket-${OldBucketID}"
+            aws cloudformation delete-stack --stack-name "myStack-${OldBucketID}"
+            #aws cloudformation delete-stack --stack-name production-distro  
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
