Added additional frontend cleanup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,13 @@ jobs:
           command: |
             export OldBucketID=$(cat ~/textfile.txt)
             aws s3 rm "s3://${OldBucketID}" --recursive
+      - run: 
+          name: Detroy the cloudformation used to create the old bucket
+          command: |
             aws cloudformation delete-stack --stack-name "stack-create-bucket-${OldBucketID}"
+      - run: 
+          name: Detroy the cloudformation used to create the old stack
+          command: |
             aws cloudformation delete-stack --stack-name "myStack-${OldBucketID}"
             #aws cloudformation delete-stack --stack-name production-distro  
 workflows:
