--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,21 +119,29 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Destroy the previous production version's S3 bucket and CloudFormation stack. 
+          name: Empty the old bucket. 
           # Use $OldBucketID environment variable or mybucket644752792305 below.
           # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
           command: |
             export OldBucketID=$(cat ~/textfile.txt)
             aws s3 rm "s3://${OldBucketID}" --recursive
+      - run:
+          name: Delete the old bucket. 
+          # Use $OldBucketID environment variable or mybucket644752792305 below.
+          # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
+          command: |
+            export OldBucketID=$(cat ~/textfile.txt)
+            aws s3 delete-bucket "s3://${OldBucketID}" 
       - run: 
           name: Detroy the cloudformation used to create the old bucket
           command: |
+            echo $OldBucketID
             aws cloudformation delete-stack --stack-name "stack-create-bucket-${OldBucketID}"
       - run: 
           name: Detroy the cloudformation used to create the old stack
           command: |
-            aws cloudformation delete-stack --stack-name "myStack-${OldBucketID}"
-            #aws cloudformation delete-stack --stack-name production-distro  
+            echo $OldBucketID
+            aws cloudformation delete-stack --stack-name "myStack-${OldBucketID}"  
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
