--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,17 +131,17 @@ jobs:
           # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
           command: |
             export OldBucketID=$(cat ~/textfile.txt)
-            aws s3 delete-bucket "s3://${OldBucketID}" 
+            aws s3 rb "s3://${OldBucketID}" 
       - run: 
           name: Detroy the cloudformation used to create the old bucket
           command: |
             echo $OldBucketID
-            aws cloudformation delete-stack --stack-name "stack-create-bucket-${OldBucketID}"
+            aws cloudformation delete-stack --stack-name "stack-create-bucket-${OldBucketID}" --region=${AWS_DEFAULT_REGION}
       - run: 
           name: Detroy the cloudformation used to create the old stack
           command: |
             echo $OldBucketID
-            aws cloudformation delete-stack --stack-name "myStack-${OldBucketID}"  
+            aws cloudformation delete-stack --stack-name "myStack-${OldBucketID}"  --region=${AWS_DEFAULT_REGION}
 workflows:
 # Name the workflow "welcome"
   Create CF Infrastructure:
